<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:gravity="center" android:layout_height="fill_parent"
	android:layout_gravity="center" android:background="#b5555555" ><!-- 这个是充满整个屏幕的背景 ,透明-->
	<RelativeLayout 
		android:theme="@android:style/Theme.Translucent"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:layout_gravity="center"
	    android:background="@drawable/messagegoods_popup"><!-- 设置这个背景很重要关键，边框，圆角都是里面定义 -->
	    <TextView
	    	android:id="@id/messagegoods_input_num"
	    	android:text="@string/messagegoods_input_num"
	    	android:textColor="@color/black"
	    	android:layout_marginLeft="15dip"
			android:layout_marginRight="15dip"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content">
	    </TextView>
		<EditText
			android:id="@id/messagegoods_input_edit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:minLines="14"
			android:layout_below="@id/messagegoods_input_num"
			android:layout_alignLeft="@id/messagegoods_input_num"
			android:layout_marginRight="15dip"
			android:capitalize="none"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:gravity="fill_horizontal"/>
		<Button
			android:id="@id/messagegoods_input_confirm"
			android:text="@string/confirm"
			android:layout_below="@id/messagegoods_input_edit"
			android:layout_alignLeft="@id/messagegoods_input_edit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/button_icon"
			android:gravity="center"
			android:layout_marginTop="2dip">
		</Button>
		<Button
			android:id="@id/messagegoods_input_cancel"
			android:text="@string/cancel"
			android:layout_below="@id/messagegoods_input_edit"
			android:layout_alignRight="@id/messagegoods_input_edit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/button_icon"
			android:gravity="center"
			android:layout_marginTop="2dip">
		</Button>
	</RelativeLayout>
</LinearLayout>